# uwrss

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  uwrss.cmd
src/: config.rs  email.rs  job.rs  main.rs
