[package]
name = "uwrss"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
scraper = "0.17.1"
chrono = "0.4.31"
rss = "2.0.6"
url = "2.2.2"
html2text = "0.6.0"
ctrlc = "3.2.4"
clap = { version = "4.4.4", features = ["derive", "env"] }
lettre = "0.10"
lettre_email = "0.9.4"
dotenv = "0.15.0"
tokio = { version = "1", features = ["full"] }
lru = { version = "0.11.1", features = [] }
rust_iso3166 = "0.1.11"
anyhow = "1.0.75"
regex = "1.10.0"
slog = "2.7.0"
slog-async = "2.8.0"
slog-term = "2.9.0"
slog-json = "2.6.1"